styles.css
:root {
    --color-bg: hsl(212, 45%, 89%);
    --color-card: hsl(0, 0%, 100%);
    --first-text: hsl(218, 44%, 22%);
    --secondary-text: hsl(216, 15%, 48%);
}

body {
    min-height: 100vh;
    background-color: var(--color-bg);
    font-family: outfit, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

article {
    width: 288px;
    text-align: center;
    background-color: var(--color-card);
    border-radius: 20px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    padding: 16px 16px 40px 16px;
}

.text {
    width: 256px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 20px 16px 0 16px;
    gap: 16px;
    padding: 0;
}

img {
    width: 100%;
    border-radius: 10px;
}

h1 {
    color: var(--first-text);
    font-size: 22px;
    margin: 0;
    padding: 0;
}

p {
    color: var(--secondary-text);
    font-size: 15px;
    margin: 0;
}

.attribution {
    font-size: 0.6875rem;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

